# An-All-Terrain-Visual-Positioning-and-Landing-System-for-UAV-Based-on-ROS-System

./: README.md
Application_Form_and_Title_Form/: 吉林大学“大学生创新创业训练计划”项目学期检查表 .docx  吉林大学“大学生创新创业训练计划”项目学期检查表.docx  附件1：创新训练项目申请书.doc
depth_calibrationdata/: depth.txt  depth.yaml
patent/: MP1833104.申请文件初稿V1.0.docx  专利申请书.docx  摘要.docx  请求书.docx  问题清单.docx
patent/专利流程图/: MOVEIT流程图.docx  MOVEIT配置流程.vsdx  shiyitu.dwg  整体流程.docx  整体流程图.vsdx  着陆流程.docx  着陆算法流程图.vsdx  通信流程.docx  通信流程图.vsdx
patent/参考资料/: 王晨模板.doc
picture/rgb_calibrationdata/: rgb.txt
project_code/: readme.txt
project_code/robot/: CMakeLists.txt  package.xml  urdf.rviz
project_code/robot_action/: CMakeLists.txt
project_code/robot_moveit_config/: package.xml
project_code/robots_plan/: CMakeLists.txt
project_code/search_keypoints/: package.xml
project_code/serial_node/: CMakeLists.txt  package.xml
project_code/serial_node/launch/: start_serial.launch
project_code/serial_node/src/: degree.cpp  listener.cpp  serial_node.cpp
rgb_calibrationdata/: rgb.yaml
robot/: package.xml
robot/config/: joint_names_robot.yaml
robot/launch/: display.launch  gazebo.launch
robot/meshes/: base_link.STL  link1_2.STL  link2_4.STL  link3_3.STL  link4_1.STL
robot_action/: package.xml
robot_action/launch/: robot_action.launch
robot_action/src/: robot_action.cpp
robot_moveit_config/: CMakeLists.txt
robots_plan/: package.xml
robots_plan/src/: arm2_planning.cpp  (+1 more)
search_keypoints/: CMakeLists.txt
search_keypoints/launch/: start_search_keypoints.launch
search_keypoints/src/: terrain_shooting.cpp
(+60 files in other folders)
